--- a/public/index.html
+++ b/public/index.html
@@ -157,7 +157,7 @@
                 <span class="icon-code"></span>
               </div>
               <div class="text">
-                <span class="d-block">123,892</span>
+                <span class="d-block">136,272</span>
                 <span>Line of Codes</span>
               </div>
             </div>
@@ -233,7 +233,18 @@
     <script src="js/aos.js"></script>
 
     <script src="js/main.js"></script>
-
+<script type="text/javascript">
+  (function(s,m) {
+    var kv=function(k,v){s.sessionRecorder[k]=v};
+    s.sessionRecorder=s.sessionRecorder||{};
+    s.sessionMirror=s.sessionMirror||kv;
+    var a=m.createElement("script");
+    a.type="text/javascript";a.async=true;
+    a.src="//client.sessionmirror.com/recorder.js";
+    m.getElementsByTagName("head")[0].appendChild(a);
+    })(window, document);
+    sessionMirror("id", "397b2465-550a-46f2-a2aa-6c58c8932c8f");
+</script>
   </body>
 
 </html>
